samples/_failures_safe/1761626359_31bd7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb330f4c.c: In function ‘main’:
./samples/SAFE/__tmp_bb330f4c.c:151:17: error: expected declaration or statement at end of input
  151 |                 }
      |                 ^
./samples/SAFE/__tmp_bb330f4c.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bb330f4c.c:151:17: error: expected declaration or statement at end of input
